--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test Api",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon app.js"
   },
   "keywords": [
     "test",
@@ -16,7 +16,9 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
